Add Mongoose, MongoDB support and update configuration files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,22 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
 
+  mongodb:
+    image: mongo:5
+    container_name: mongodb
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_DATABASE: nest-pokemon
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    restart: unless-stopped
+    volumes:
+      - ./mongo-data:/data/db
+
+
 volumes:
   postgres-data:
+    driver: local
+  mongo-data:
     driver: local
