return secureurl for images. images serrved by api instead static server

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,17 @@
 # Nest
+HOST_API=localhost
 PORT=3000
 GLOBAL_PREFIX=api/v1
 #psql
+DB_HOST=localhost
 DB_USER=Teslo
 DB_PASSWORD=yoursecretpasword
 DB_NAME=TesloDb
 PAGINATION_LIMIT=10
+# TypeOrm
+# sync only in development
+SYNC_ENTITIES=false
+# MongoDB
+MONGO_URI=mongodb://localhost
+MONGO_PORT=27017
+MONGO_DB=nest-pokemon
