use config service inside dto Add .env JWT salt and password pattern; implement checkAuthStatus endpoint

--- a/.env.template
+++ b/.env.template
@@ -3,11 +3,13 @@ HOST_API=localhost
 PORT=3000
 GLOBAL_PREFIX=api/v1
 # JWT
-JWT_SECRET=yoursecretkey
+JWT_SECRET=
+JWT_SALT=10
+PSSWORD_PATTERN=/(?:(?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
 #psql
 DB_HOST=localhost
 DB_USER=Teslo
-DB_PASSWORD=yoursecretpasword
+DB_PASSWORD=
 DB_NAME=TesloDb
 PAGINATION_LIMIT=10
 # TypeOrm
