--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket": "^0.14.67",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
@@ -60,7 +61,9 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
@@ -74,7 +77,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "webpack": "^5.98.0"
   },
   "jest": {
     "moduleFileExtensions": [
