configuraciones despliege Heroku

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
+# STAGE = dev | prod | test
+STAGE=dev
 # Nest
-HOST_API=localhost
+HOST_API=http://localhost
 PORT=3000
 GLOBAL_PREFIX=api/v1
 # JWT
