--- a/.env.template
+++ b/.env.template
@@ -7,7 +7,7 @@ GLOBAL_PREFIX=api/v1
 # JWT
 JWT_SECRET=
 JWT_SALT=10
-PSSWORD_PATTERN=/(?:(?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
+PASSWORD_PATTERN=(?:(?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$
 #psql
 DB_HOST=localhost
 DB_USER=Teslo
