--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./jest-e2e.json",
-    "test:e2e:watch": "jest --config ./jest-e2e.json --watch --detectOpenHandles",
-    "test:e2e:cov": "jest --config ./jest-e2e.json --coverage --detectOpenHandles"
+    "test:e2e:watch": "jest --config ./jest-e2e.json --watch",
+    "test:e2e:cov": "jest --config ./jest-e2e.json --coverage"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.17",
