--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "mongoose": "^8.13.2",
+    "openai": "^4.98.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
@@ -52,8 +53,6 @@
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
-    "npm-check-updates": "^17.1.18",
-    "eslint-plugin-jest": "^28.11.0",
     "@darraghor/eslint-plugin-nestjs-typed": "^6.4.4",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.24.0",
@@ -73,9 +72,11 @@
     "@typescript-eslint/parser": "^8.29.1",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "npm-check-updates": "^17.1.18",
     "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.0",
