- image-generation - store in FS

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
+    "sharp": "^0.34.2",
     "socket": "^0.14.103",
     "typeorm": "^0.3.22"
   },
