--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@yarnpkg/core": "^4.4.1",
     "@yarnpkg/extensions": "2.0.5",
     "bcrypt": "^5.1.1",
+    "body-parser": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
@@ -65,6 +66,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.11.21",
     "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
